# maude

./: .device-implementation-summary.txt  .dockerignore  .gitignore  .prettierignore  ANIMATION_GUIDE.md  ANIMATION_IMPLEMENTATION_SUMMARY.md  ANIMATION_QUICK_REFERENCE.md  COMMENTARY_EXPORT_IMPLEMENTATION.md  COMMENTARY_HISTORY_IMPLEMENTATION.md  DEVICE_CAPABILITIES.md  DEVICE_CAPABILITIES_ACCEPTANCE.md  DEVICE_CAPABILITIES_IMPLEMENTATION.md  DEVICE_CAPABILITIES_USER_GUIDE.md  DEVICE_IMPLEMENTATION_COMPLETE.md  DEVICE_NODE_ACTIONS.md  DEVICE_NODE_CHECKLIST.md  DEVICE_NODE_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.golem  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_INDEX.md  Jenkinsfile  LICENSE  NOTIFICATION_ROUTING_IMPLEMENTATION.md  PATTERN_LEARNING_STATUS.md  PRD-ColorCommentary.md  REACTIVITY_DEBUG.md  REACTIVITY_INVESTIGATION.md  README.md  SELF_IMPROVING_SKILLS_IMPLEMENTATION.md  SELF_IMPROVING_SKILLS_README.md  SESSION_COMPLETION_REPORT.md  SPATIAL_AUDIO_IMPLEMENTATION.md  SPATIAL_AUDIO_TESTING.md  STORY_COMPLETION.md  STREAMING_DEBUG.md  STREAMING_FIX.md  STREAMING_FIX_RESOURCES.md  STREAMING_FIX_TESTING.md  STREAMING_IMPROVEMENTS_SUMMARY.md  (+20 more)
.husky/: pre-commit
STREAMING_FIX_NOTES/: svelte5-reactivity-solution.md
designs/: E.aseprite  E.json  E16.aseprite  E2.aseprite  E3.aseprite  golemface.aseprite
docs/: NOTIFICATIONS.md  REMOTE_ACCESS.md  REMOTE_ACCESS_QUICKSTART.md  SPATIAL_AUDIO.md  device-capabilities.md  notifications.md
scripts/: build-standalone.ts  create-nextgen-prd.ts  create-terminal-prd.ts  generate-manifest.ts  suffix-binary.sh  suffix-binary.ts  upload-release.ts
site/: _headers  index.html  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device.rs  main.rs
(+1 files in other folders)
