[package]
name = "e"
version = "0.1.0"
edition = "2021"
description = "E desktop shell — Tauri + Bun sidecar"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
ico = "0.3"
